Created a page for the chicken recipe

--- a/recipes/chicken-stew.html
+++ b/recipes/chicken-stew.html
@@ -10,5 +10,37 @@
     <header>
         <h1>Chicken Stew</h1>
     </header>
+    <img src="./Chicken-Stew_5.webp" alt="A plate of chicken stew" width="300px" height="200px">
+    <h2>Ingedients</h2>
+    <ul>
+        <li>2 Ibs chicken thighs</li>
+        <li>3 tomatoes</li>
+        <li>1 red bell pepper</li>
+        <li>1 habanero pepper use 1/<sub>2</sub> if you don't want it too spicy</li>
+        <li>1/<sub>2</sub> cup Olive oil</li>
+        <li> 1 cup chicken stock (broth)</li>
+        <li>1 onions</li>
+        <li>1 teaspoon bouillon powder</li>
+        <li>thyme in desired quantity</li>
+        <li>Black pepper</li>
+        <li>Curry Powder</li>
+        <li>Curry powder</li>
+        <li>Salt</li>
+    </ul>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Wash and <b>pat dry</b> the chicken</li>
+        <li>Rub the chicken thigh with salt and black pepper, and leave them in a bowl</li>
+        <li>Heat olive oil in a pan</li>
+        <li>Brown the Chicken of each side (about 10mins each)</li>
+        <li>Cut the onions into two and chop one part into small pieces</li>
+        <li>When the chicken is done. take it out and set it aside</li>
+        <li>Blend the tomatoes, red bell pepper, habanero pepper, and the other half of the onion.</li>
+        <li>Saute the choppped onion in the oil till translucent</li>
+        <li>Pour the blended tomato and pepper mix and boil for 5mins</li>
+        <li>Add chicken, stock, bouillon, curry and thyme</li>
+        <li>Taste for salt and add more if necessary</li>
+        <li>Cook for 20mins or until chicken is done</li>
+    </ol>
 </body>
 </html>
