--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header>
         <h1>Odin Recipes</h1>
     </header>
-    <a href="./recipes/chicken-stew.html" target="_blank" rel="noopener noreferrer">Chicken stew</a>
+    <ul>
+        <li><a href="./recipes/chicken-stew.html" target="_blank" rel="noopener noreferrer">Chicken stew</a></li>
+        <li><a href="./recipes/Baked-Marinated-Chicken.html">Baked Marinated Chicken</a></li>    </ul>
+    
 </body>
 </html>
