--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Chemben">
+    <meta name="description" content="This page talks about a simple recipes page">
+    <meta property="og:title" content="My sample page" />
+    <meta property="og:type" content="Website" />
+    <meta property="og:url" content="https://chemben17.github.io/odin-recipes./" />
+    <meta property="og:image" content="./" />
     <title>Document</title>
 </head>
 <body>
